objects/SGR_Account_Member_Benefit__c.object
<CustomObject>
    <fields>
        <fullName>ACA_Fee__c</fullName>
        <label>ACA Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acc_Mem_Benfit_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Acc Mem Benfit External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Census__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Census</label>
        <referenceTo>SGR_Account_Census__c</referenceTo>
        <relationshipLabel>Account Member Benefits</relationshipLabel>
        <relationshipName>Account_Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SGR Plan Rate (Account)</label>
        <referenceTo>SGR_Account_Plan_Rate__c</referenceTo>
        <relationshipLabel>Account Member Benefits</relationshipLabel>
        <relationshipName>Account_Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Number__c</fullName>
        <label>Benefit Agreement Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Agreement</label>
        <referenceTo>Benefit_Agreement__c</referenceTo>
        <relationshipLabel>Account Member Benefits</relationshipLabel>
        <relationshipName>Account_Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BlueStar_Account_Number__c</fullName>
        <label>BlueStar Account Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Key_Effective_Date__c</fullName>
        <label>CMS Key Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMS_Key_End_Date__c</fullName>
        <label>CMS Key End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMS_Sequence_ID_Number__c</fullName>
        <label>CMS Sequence ID Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Sequence_Number__c</fullName>
        <label>CMS Sequence Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Entitity_Code__c</fullName>
        <label>Corporate Entitity Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Name__c</fullName>
        <label>Corporate Product Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Acc Mem Benfit External Id</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_SSNK__c</fullName>
        <label>GRP SSNK</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Code__c</fullName>
        <label>Gender Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Section</label>
        <referenceTo>Group_Section__c</referenceTo>
        <relationshipLabel>Account Member Benefits</relationshipLabel>
        <relationshipName>Account_Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_Code__c</fullName>
        <label>Insurance Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEM_POLICY_SSNK__c</fullName>
        <label>MEM POLICY SSNK</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEM_SSNK__c</fullName>
        <label>MEM SSNK</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Number__c</fullName>
        <label>Marketing Plan Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Effective_Date__c</fullName>
        <label>Member Benefit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Sequence_Number__c</fullName>
        <label>Member Benefit Sequence Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Policy_Tier__c</fullName>
        <label>Member Policy Tier</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Rates_or_Composite_Rates__c</fullName>
        <label>Member Rates or Composite Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Membership_Number__c</fullName>
        <label>Membership Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLICY_SSNK__c</fullName>
        <label>POLICY SSNK</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanId__c</fullName>
        <formula>Account_Plan_Rate__r.Plan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlanId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <label>Premium Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_c__c</fullName>
        <label>Product Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type_Code__c</fullName>
        <label>Rate Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type_Code_c__c</fullName>
        <label>Rate Type Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <label>Row#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sequence_Number__c</fullName>
        <label>Sub Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscriber_Number__c</fullName>
        <label>Subscriber Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplemental_Insurance_type_Code__c</fullName>
        <label>Supplemental Insurance type Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAX__c</fullName>
        <label>TAX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tobacco_Indicator__c</fullName>
        <label>Tobacco Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Display_BA_Number__c</fullName>
        <label>User Display BA Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Display_Group_Number__c</fullName>
        <label>User Display Group Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Display_Section_Number__c</fullName>
        <label>User Display Section Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Account Member Benefit</label>
    <nameField>
        <label>Account Member Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Member Benefits</pluralLabel>
    <recordTypes>
        <fullName>SGR_Account_Membership_Benefits</fullName>
        <active>true</active>
        <label>SGR  Account Membership Benefits</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>